# ag-ui-demo

./: .gitignore  CLAUDE.md  README.md
backend/: main.py  pyproject.toml
backend/config/: components.yaml  mcp_servers.yaml  models.yaml  tools.yaml  worlds.yaml
backend/src/: agents.py  factory.py  main.py  tools.py  workflow.py
backend/src/config/: __init__.py  loader.py  models.py  registry.py
backend/src/ui/: __init__.py  agui_runtime.py  component_catalog.py  page_document.py  page_spec.py  render_page_tool.py
backend/src/ui/catalog/: __init__.py  instructions.py  loader.py  models.py
backend/src/ui/page_document/: __init__.py  schema.py  validation.py
backend/src/ui/runtime/: __init__.py  agui_page_runtime.py
backend/src/ui/tools/: __init__.py  render_page.py
backend/tests/: test_agui_page_runtime.py  test_component_catalog.py  test_config_loader.py  test_factory.py  test_multi_agent_e2e.py  test_multi_agent_factory.py  test_multi_agent_models.py  test_page_document.py  test_page_spec.py  test_registry.py  test_render_page_tool_schema.py  test_single_agent_unchanged.py
backend/worlds/default/: flight_agent.yaml  hotel_agent.yaml  travel_agent.yaml  travel_group.yaml  weather_agent.yaml
docs/superpowers/plans/: 2026-05-20-ag-ui-demo.md  2026-06-02-generative-grid-page-runtime.md  2026-06-02-generative-ui-e2e.md
docs/superpowers/specs/: 2026-05-20-ag-ui-demo-design.md  (+2 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  main.tsx  types.ts
(+40 files in other folders)
